--- a/Chess-Challenge/Chess-Challenge.csproj
+++ b/Chess-Challenge/Chess-Challenge.csproj
@@ -23,12 +23,6 @@
   </ItemGroup>
 
   <ItemGroup>
-    <Compile Update="src\My Bot\MyBot.cs">
-      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
-    </Compile>
-    <Compile Update="src\Framework\Application\UI\BotBrainCapacityUI.cs">
-      <CopyToOutputDirectory>Never</CopyToOutputDirectory>
-    </Compile>
     <Compile Update="src\Evil Bot\EvilBot.cs">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Compile>
@@ -50,6 +44,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <Folder Include="src\Bots\" />
     <Folder Include="src\Framework\Chess\" />
   </ItemGroup>
 
