--- a/Chess-Challenge/Chess-Challenge.csproj
+++ b/Chess-Challenge/Chess-Challenge.csproj
@@ -27,6 +27,9 @@
     <None Update="resources\Fens.txt">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
+	<None Update="resources\chess960Fens.txt">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
     <None Update="resources\Fonts\OPENSANS-SEMIBOLD.TTF">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
